@@ -1,3 +1,8 @@
+2006-12-01  Chris Taylor  <chris@icculus.org>
+
+	* main/weapon.c: only autoselect a secondary weapon if the player
+	didn't have any of that type before (fix bug #2671)
+
 2006-11-30  Chris Taylor  <chris@icculus.org>
 
 	* arch/ogl/ogl.c: avoid loading OpenGL textures before they have
